Revert "review0prep"
This reverts commit 598b7191fee42615c9d4e926dddd9b9648395a28.

--- a/style.css
+++ b/style.css
@@ -45,10 +45,6 @@ a:hover{
     text-decoration:none;
     color:var(--colinputfocus);
 }
-.point{
-    cursor: pointer;
-    text-align: center;
-}
 .shad{
     box-shadow:var(--boxshadow);
 }
@@ -62,7 +58,6 @@ a:hover{
     z-index: -10;
     transition:none;
     overflow: auto;
-/*    overflow-y:hidden;*/
 }
 .maindiv>.container{
     width:100%;
@@ -91,23 +86,6 @@ a:hover{
     position:relative;
     float:left;
     height:100%;
-    width:100%;
-    overflow-y:auto;
-}
-.userpage{
-    margin-top: 2em;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-content: space-between;
-}
-.userpage > div{
-    flex-flow: column wrap;
-/*    width:45%;*/
-    align-items: center;
-}
-.userpage > div > div{
-    margin: 2em 0;
 }
 .introactions{
     padding:.5em;
@@ -126,17 +104,12 @@ a:hover{
     transition: none;
 }
 header#header{
+    width:100%;
+    padding:1em;
+    min-height:2em;
+    background-color: rgba(0,0,0,.5);
     position: sticky;
     top:0;
-    width:100%;
-    min-height:2rem;
-    background-color: rgba(0,0,0,.5);
-    top:0;
-    font-size: 1.5em;
-    z-index: 3;
-}
-.headpad{
-    padding-top:calc(2rem + 1.5rem - 5px);
 }
 .maindiv #searchres{
     overflow-y:auto;
@@ -160,27 +133,7 @@ header#header{
 /*    border: 1px solid var(--colinputfocus);*/
     transition: none;
 }
-.cardraised{
-/*    padding:0.5em 1em;*/
-    border:none;
-    border-radius: 8px;
-    background-color:var(--colbg);
-    box-shadow: -5px -5px 10px 2px rgba(255, 255, 255, 0.5),  5px 5px 8px 2px rgba(0,0,0,0.5);
-}
-.cardraiseonhover{
-    border: 1px solid grey;
-    border-radius: 8px;
-    background-color:var(--colbg);
-}
-.cardraiseonhover center{
-    width:100%;
-}
-.cardraiseonhover:hover{
-/*    padding:0.5em 1em;*/
-    border:1px solid transparent;
-    transition: 0.05s ease-out;
-    box-shadow: -5px -5px 10px 2px rgba(255, 255, 255, 0.5),  5px 5px 8px 2px rgba(0,0,0,0.5);
-}
+
 
 
 
@@ -228,10 +181,6 @@ tr.th{
 }
 .table2{
   margin-bottom:5em;
-}
-.table thead th{
-    border-top: 1px solid var(--colinputfocus) !important;
-    border-bottom: 1px solid var(--colinputfocus) !important;
 }
 .table tr, table tr td, table tr th{
     border:1px solid transparent !important;
