--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ a:hover{
 .maindiv>.container{
     width:100%;
 }
-.maindiv #bussearch{
+.pageleft{
     position:relative;
     float:left;
     min-height: 100vh;
@@ -78,7 +78,7 @@ a:hover{
     background-image: linear-gradient(-90deg, rgb(210, 210, 210), rgb(210, 210, 210), rgb(240, 240, 240));
     box-shadow: 0 0 10px 2px rgba(0,0,0,0.5);
 }
-.maindiv #bussearch center, .page center{
+.page center{
     position:relative;
     top:50%;
 /*    width:100%;*/
@@ -93,21 +93,6 @@ a:hover{
     height:100%;
     width:100%;
     overflow-y:auto;
-}
-.userpage{
-    margin-top: 2em;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-content: space-between;
-}
-.userpage > div{
-    flex-flow: column wrap;
-/*    width:45%;*/
-    align-items: center;
-}
-.userpage > div > div{
-    margin: 2em 0;
 }
 .introactions{
     padding:.5em;
@@ -141,45 +126,24 @@ header#header{
 .maindiv #searchres{
     overflow-y:auto;
 }
-.maindiv #searchres center{
+.maindiv .donttransform{
     top:0;
     transform: none; 
 }
-.maindiv #searchres .result{
+.maindiv #searchres .result:nth-child(1), .maindiv #casualhome .result:nth-child(1){margin-top: 2em;}
+.maindiv #searchres .result:last-child, .maindiv #casualhome .result:last-child{margin-bottom: 2em;}
+.result{
     padding:1em;
     margin:1em;
-}
-.maindiv #searchres .result:nth-child(1){margin-top: 2em;}
-.maindiv #searchres .result:last-child{margin-bottom: 2em;}
-.result{
     border-radius: 8px;
-    border: 1px solid rgba(0,0,0,0);
+    border: 1px solid grey;
 }
 .result:hover, .result:focus, .result:focus-within{
     box-shadow: 5px 5px 8px 2px rgba(0,0,0,0.5), -5px -5px 5px 2px rgba(255, 255, 255, 0.5);
+    cursor: pointer;
 /*    border: 1px solid var(--colinputfocus);*/
+    border:1px solid rgba(0,0,0,0);
     transition: none;
-}
-.cardraised{
-/*    padding:0.5em 1em;*/
-    border:none;
-    border-radius: 8px;
-    background-color:var(--colbg);
-    box-shadow: -5px -5px 10px 2px rgba(255, 255, 255, 0.5),  5px 5px 8px 2px rgba(0,0,0,0.5);
-}
-.cardraiseonhover{
-    border: 1px solid grey;
-    border-radius: 8px;
-    background-color:var(--colbg);
-}
-.cardraiseonhover center{
-    width:100%;
-}
-.cardraiseonhover:hover{
-/*    padding:0.5em 1em;*/
-    border:1px solid transparent;
-    transition: 0.05s ease-out;
-    box-shadow: -5px -5px 10px 2px rgba(255, 255, 255, 0.5),  5px 5px 8px 2px rgba(0,0,0,0.5);
 }
 
 
@@ -210,6 +174,9 @@ input{
 input[type=submit]:hover, input[type=button]{
     background-color:var(--coltop);
     cursor:pointer;
+}
+select{
+    text-align-last : center;
 }
 .right{
   float:right;
